--- a/additional_task_03/css/style.css
+++ b/additional_task_03/css/style.css
@@ -2,26 +2,26 @@ ul>li {
    color: red;
 }
 
-ul~li {
+ul>li~li {
    color: green;
 }
 
-ul>ul>li {
+ul>li>ul>li {
    color: blue;
 }
 
-ul>ul>li~li {
+ul>li>ul>li~li {
    color: orange;
 }
 
-ul>ul>ol>li {
+ul>li>ul>li>ol>li {
    color: #4597f7;
 }
 
-ul>ul>ol>li~li {
+ul>li>ul>li>ol>li~li {
    color: #5d5d5d;
 }
 
-ul>ul>li>span {
+ul>li>ul>li>span {
    color: #a0f0fc;
 }
