--- a/lesson_04/css/style.css
+++ b/lesson_04/css/style.css
@@ -1,8 +1,8 @@
 @import url("reset.css");
 @import url("fonts.css");
 
-@import url("https: //fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
-@import url("https: //fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Parisienne&family=Poppins:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&display=swap');
 
 body>header>div>h1 {
    font-family: "Merienda", cursive;
