--- a/lesson_04/css/style.css
+++ b/lesson_04/css/style.css
@@ -12,7 +12,6 @@ body>header>div>h1 {
    text-align: center;
    text-shadow: 2px -2px 3px #000;
    text-transform: uppercase;
-   line-height: 1;
    letter-spacing: 5px;
 }
 
@@ -26,7 +25,6 @@ body>header>div>h1+p {
    text-decoration-color: rgb(127, 75, 23);
    text-decoration-style: wavy;
    text-transform: lowercase;
-   line-height: 1;   
    letter-spacing: 2px;
 }
 
@@ -75,13 +73,10 @@ body>main>div~div>h3 {
    font-size: 20px;
    font-weight: 500;
    color: #1A1A1A;
-   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    line-height: 1.5;
-   /* -webkit-text-stroke-width: 1px;
-   -webkit-text-stroke-color: #000; */
 }
 
-body>main>div~div>p {
+body>main>div~div>div {
    font-family: "Poppins", sans-serif;
    font-size: 18px;
    color: #808080;
