--- a/lesson_06/style.css
+++ b/lesson_06/style.css
@@ -1,6 +1,6 @@
 @import url("reset.css");
-@import url("https: //fonts.googleapis.com/css?family=Poppins:regular&display=swap");
-@import url("https: //fonts.googleapis.com/css?family=Montserrat:300,regular,700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Poppins:regular&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,regular,700&display=swap');
 
 .first {
    font-family: "Poppins", sans-serif;
