--- a/lesson_09/css/style.css
+++ b/lesson_09/css/style.css
@@ -4,7 +4,11 @@
    overflow: clip;
    min-height: 100%;
 }
-.container {
+.container-white{
+   background: var(--Gray-Scale-White, #FFF);
+   background: url("../img/pear.svg") 0 440px no-repeat scroll;
+}
+.content-container {
    max-width: 1320px;
    margin: 0 auto;
    padding-left: 15px;
@@ -15,7 +19,6 @@
    border-bottom-style: solid;
    border-bottom-color: #999;
    border-bottom-width: 1px;
-   margin-bottom: 80px;
    text-align: center;
    max-width: 1320px;
 }
@@ -54,17 +57,17 @@
    font-weight: 400;
    color: #999;
 }
+/* ======================================================================================= */
 .futured-products {
    display: inline-block;
    margin-bottom: 40px;
 }
-.futured-products__container-title {
-   display: inline-block;
-}
 .section-title{
    font-size: 40px;
    font-weight: 600;
-   margin-right: 822px;
+   display: inline-block;
+   margin-top: 80px;
+   margin-bottom: 40px;
 }
 .button {
    font-size: 16px;
@@ -72,14 +75,16 @@
    color: #00B207;
    width: 90px;
    background: url("../img/arrow.svg") right no-repeat;
+   /* text-align: right; */
 }
 .button:hover {
    color: #2C742F;
    background: url("../img/arrow_hover.svg") right no-repeat;
 }
+/* ======================================================================================= */
 .products {
    max-width: 1320px;
-   margin-bottom: 80px;
+   margin-bottom: 60px;
    display: inline-block;
 }
 .products:not(:last-child){
@@ -90,6 +95,7 @@
    border-radius: 8px;
    border: 1px solid #E6E6E6;
    display: inline-block;
+   margin-bottom: 20px;
 }
 .item:hover{
    border-radius: 8px;
@@ -97,7 +103,7 @@
    box-shadow: 0px 0px 12px 0px rgba(32, 181, 38, 0.32);
 }
 .item:not(:last-child){
-   margin-right: 24px;
+   margin-right: 20px;
 }
 .image {
    max-width: 302px;
@@ -113,6 +119,9 @@
    font-weight: 400;
    color: #4D4D4D;
    line-height: 1.5;
+}
+.description__price__container{
+   font-size: 0;
 }
 .description__price{
    font-size: 16px;
@@ -143,7 +152,6 @@
    width: 20px;
    height: 20px;
    margin: 8px 10px 10px 9px;
-   text-align: right;
 }
 .description__add-to-cart:hover {
    background-color: #00B207;
@@ -152,5 +160,123 @@
    visibility: hidden;
 }
 .description__add-to-cart:active {
+   background-color: #2C742F;
+}
+/* ======================================================================================= */
+.container-gray {
+   background: url("../img/group_7.svg") right 370px no-repeat scroll,
+               url("../img/group-left.svg") left 450px no-repeat scroll,
+               url("../img/zucchini.svg") left 950px no-repeat scroll,
+               url("../img/radish.svg") right 600px no-repeat scroll,
+               linear-gradient(180deg, #F2F5F3 20.01%, #FFF 100%);            
+}
+.category {
+   max-width: 1320px;
+   display: inline-block;
+   margin-bottom: 109px;
+}
+.category__item {
+   min-width: 190px;
+   min-height: 210px;
+   text-align: center;
+   background-color: #FFF;
+   border-radius: 6px;
+   display: inline-block;
+   margin-bottom: 24px;
+}
+.category__item:not(:last-child){
+   margin-right: 24px;
+}
+.picture{
+   margin-top: 32px;
+   margin-bottom: 24px;
+}
+.name-of-category{
+   font-size: 18px;
+   font-weight: 500;
+   line-height: 1.5;
+   color: #1A1A1A;
+   margin-bottom: 6px;
+}
+.number-of-products{
+   font-size: 14px;
+   font-weight: 400;
+   line-height: 1.5;
+   color: #808080;
+   margin-bottom: 24px;
+}
+.category__item:hover{
+   outline: 1px solid #2C742F;
+   box-shadow: 0px 0px 12px 0px rgba(32, 181, 38, 0.32);
+}
+.category__item:hover .name-of-category{
+   color: #2C742F;
+}
+/* ======================================================================================= */
+.store-description{
+   display: inline-block;
+   max-width: 1320px;
+   font-size: 0;
+}
+.image-grandfather{
+   margin-top: 51px;
+   margin-right: 20px;
+   max-width: 276px;
+   max-height: 400px;
+   border-radius: 8px;
+   vertical-align: top;
+}
+.image-man{
+   margin-right: 30px;
+   max-width: 444px;
+   max-height: 457px;
+   margin-top: -385px;
+}
+.text {
+   margin-top: 67px;
+   max-width: 510px;
+   display: inline-block;
+}
+.text__title{
+   font-size: 40px;
+   font-weight: 600;
+   color: #1A1A1A;
+   line-height: 1.2;
+   margin-bottom: 26px;
+}
+.text__subtitle{
+   font-size: 18px;
+   font-weight: 500;
+   line-height: 1.5;
+   color: #1A1A1A;
+   padding-left: 34px;
+   background: url("../img/check_mark.svg") left no-repeat scroll;
+   margin-bottom: 10px;
+}
+.text__description {
+   font-size: 14px;
+   font-weight: 400;
+   line-height: 1.5;
+   color: #808080;
+   margin-left: 34px;
+   margin-bottom: 26px;
+}
+.shop-now{
+   width: 192px;
+   height: 51px;
+   border-radius: 43px;
+   font-size: 16px;
+   font-weight: 600;
+   line-height: 1.2;
+   color: #FFF;
+   background-color: #00B207;
+   text-align: center;
+   padding-top: 16px;
+   margin-bottom: 96px;
+}
+.shop-now__arrow{
+   margin-left: 16px;
+}
+.shop-now:hover{
    background-color: #2C742F;
 }
