--- a/lesson_09/css/style.css
+++ b/lesson_09/css/style.css
@@ -4,178 +4,83 @@
    overflow: clip;
    min-height: 100%;
 }
-.container-white{
-   background: var(--Gray-Scale-White, #FFF);
-   background: url("../img/pear.svg") 0 440px no-repeat scroll;
-}
-.content-container {
-   max-width: 1320px;
-   margin: 0 auto;
+.ecobazar{
    padding-left: 15px;
    padding-right: 15px;
    font-family: "Poppins", sans-serif;
 }
-.tabs-container{
-   border-bottom-style: solid;
-   border-bottom-color: #999;
-   border-bottom-width: 1px;
-   text-align: center;
-   max-width: 1320px;
-}
-.tabs {
-   display: inline-block;
-   padding-top: 40px;
-   padding-bottom: 40px;
-   background-color: #fff;
-   min-width: 300px;
-}
-.tabs:hover{
-   box-shadow: 0px -4px 0px 0px #00B207 inset;
-}
-[class *="tabs__"]{
-   text-align: center;
-}
-.tabs:not(:last-child){
-   margin-right: 24px;
-}
-.icons {
-   vertical-align: center;
-   margin-bottom: 16px;
-}
-.tabs:hover .icons{
-   visibility: hidden;
-}
-.title {
+.tabs__title{
    font-size: 18px;
    font-weight: 600;
    line-height: 1.5;
    margin-bottom: 8px;
    color: #1A1A1A;
 }
-.subtitle {
+.tabs__subtitle{
    font-size: 14px;
    font-weight: 400;
    color: #999;
 }
-/* ======================================================================================= */
-.futured-products {
-   display: inline-block;
-   margin-bottom: 40px;
-}
-.section-title{
+.section-name-title{
    font-size: 40px;
    font-weight: 600;
-   display: inline-block;
-   margin-top: 80px;
-   margin-bottom: 40px;
 }
-.button {
+.section-name-button{
    font-size: 16px;
    font-weight: 500;
    color: #00B207;
    width: 90px;
    background: url("../img/arrow.svg") right no-repeat;
-   /* text-align: right; */
 }
-.button:hover {
+.section-name-button:hover{
    color: #2C742F;
    background: url("../img/arrow_hover.svg") right no-repeat;
 }
-/* ======================================================================================= */
-.products {
-   max-width: 1320px;
-   margin-bottom: 60px;
-   display: inline-block;
-}
-.products:not(:last-child){
-   margin-right: 24px;
-}
-.item {
-   max-width: 312px;
-   border-radius: 8px;
-   border: 1px solid #E6E6E6;
-   display: inline-block;
-   margin-bottom: 20px;
-}
-.item:hover{
-   border-radius: 8px;
-   outline: 1px solid #2C742F;
-   box-shadow: 0px 0px 12px 0px rgba(32, 181, 38, 0.32);
-}
-.item:not(:last-child){
-   margin-right: 20px;
-}
-.image {
+.product-card__image{
    max-width: 302px;
    max-height: 302px;
-   padding: 5px;
-   margin-bottom: 0.5px;
 }
-.description{
-   padding: 16px;
-}
-.description__name {
+.product-card__description-name{
    font-size: 14px;
    font-weight: 400;
    color: #4D4D4D;
    line-height: 1.5;
 }
-.description__price__container{
-   font-size: 0;
-}
-.description__price{
+.product-card__description-price{
    font-size: 16px;
    font-weight: 500;
    color: #1A1A1A;
-   margin-bottom: 6px;
    line-height: 1.5;
-   display: inline-block;
 }
 .crossed-out {
    font-weight: 400;
    color: #999;
    text-decoration: line-through;
-   padding-left: 2px;
 }
-.description__rating{
-   font-size: 0;
-}
-.description__add-to-cart {
-   width: 38px;
-   height: 38px;
+.product-card__description-add-to-cart{
+   width: 40px;
+   height: 40px;
    border-radius: 50%;
    background: #F2F2F2 url("../img/bag-hover.svg") 9px 9px no-repeat scroll;
-   display: inline-block;
-   text-align: right;
 }
 .bag {
    width: 20px;
    height: 20px;
    margin: 8px 10px 10px 9px;
 }
-.description__add-to-cart:hover {
+.product-card__description-add-to-cart:hover {
    background-color: #00B207;
 }
-.description__add-to-cart:hover .bag{
+.product-card__description-add-to-cart:hover .bag {
    visibility: hidden;
 }
-.description__add-to-cart:active {
+.product-card__description-add-to-cart:active {
    background-color: #2C742F;
 }
-/* ======================================================================================= */
-.container-gray {
-   background: url("../img/group_7.svg") right 370px no-repeat scroll,
-               url("../img/group-left.svg") left 490px no-repeat scroll,
-               url("../img/zucchini.svg") 35px 950px no-repeat scroll,
-               url("../img/radish.svg") right 600px no-repeat scroll,
-               linear-gradient(180deg, #F2F5F3 20.01%, #FFF 100%);            
+.product-card__description-rating{
+   font-size: 0;
 }
-.category {
-   max-width: 1320px;
-   display: inline-block;
-   margin-bottom: 109px;
-}
-.category__item {
+.category{
    min-width: 190px;
    min-height: 210px;
    text-align: center;
@@ -184,84 +89,51 @@
    display: inline-block;
    margin-bottom: 24px;
 }
-.category__item:not(:last-child){
-   margin-right: 24px;
-}
-.picture{
-   margin-top: 32px;
-   margin-bottom: 24px;
-}
-.name-of-category{
+.category-name{
    font-size: 18px;
    font-weight: 500;
    line-height: 1.5;
    color: #1A1A1A;
    margin-bottom: 6px;
 }
-.number-of-products{
+.category-number{
    font-size: 14px;
    font-weight: 400;
    line-height: 1.5;
    color: #808080;
    margin-bottom: 24px;
 }
-.category__item:hover{
-   outline: 1px solid #2C742F;
-   box-shadow: 0px 0px 12px 0px rgba(32, 181, 38, 0.32);
-}
-.category__item:hover .name-of-category{
-   color: #2C742F;
-}
-/* ======================================================================================= */
-.store-description{
-   display: inline-block;
-   max-width: 1320px;
-   font-size: 0;
-}
-.image-grandfather{
-   margin-top: 51px;
-   margin-right: 20px;
+.store-description-image-grandfather {
    max-width: 276px;
    max-height: 400px;
    border-radius: 8px;
    vertical-align: top;
 }
-.image-man{
-   margin-right: 30px;
+.store-description-image-man {
    max-width: 444px;
    max-height: 457px;
-   margin-top: -385px;
 }
-.text {
-   margin-top: 67px;
-   max-width: 510px;
-   display: inline-block;
-}
-.text__title{
+.store-description-text-title{
    font-size: 40px;
    font-weight: 600;
    color: #1A1A1A;
    line-height: 1.2;
    margin-bottom: 26px;
 }
-.text__subtitle{
-   font-size: 18px;
-   font-weight: 500;
-   line-height: 1.5;
-   color: #1A1A1A;
-   padding-left: 34px;
-   background: url("../img/check_mark.svg") left no-repeat scroll;
-   margin-bottom: 10px;
-}
-.text__description {
+.store-description-text{
    font-size: 14px;
    font-weight: 400;
    line-height: 1.5;
    color: #808080;
-   margin-left: 34px;
-   margin-bottom: 26px;
 }
-.shop-now{
+.store-description-text-strong{
+   font-size: 18px;
+   font-weight: 500;
+   line-height: 1.5;
+   color: #1A1A1A;
+   margin-bottom: 10px;
+}
+.store-description-button{
    width: 192px;
    height: 51px;
    border-radius: 43px;
@@ -272,11 +144,10 @@
    background-color: #00B207;
    text-align: center;
    padding-top: 16px;
-   margin-bottom: 96px;
 }
-.shop-now__arrow{
-   margin-left: 16px;
-}
-.shop-now:hover{
+.store-description-button:hover{
    background-color: #2C742F;
+}
+.store-description-button-arrow{
+   margin-left: 16px;
 }
